--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@eric.dahlseng/notes-organizer",
   "version": "0.1.0",
   "description": "",
-  "main": "dist/index.js",
+  "bin": "dist/index.js",
   "scripts": {
     "build": "rm -rf ./dist && babel sources --out-dir dist --copy-files --source-maps inline",
     "dev": "babel-node sources/index.js",
@@ -14,8 +14,9 @@
     "lint-report:commit": "mkdir -p ./linting-results/commitlint && commitlint --format commitlint-format-junit > ./linting-results/commitlint/report.xml",
     "lint-report:js": "eslint ./ --output-file ./linting-results/eslint/report.xml --format junit",
     "lint-report:json": "mkdir -p ./linting-results/prettier-json && prettier-junit --config .prettierrc.js '**/*.json' > ./linting-results/prettier-json/report.xml",
-    "release": "standard-version",
     "lint-report:yaml": "mkdir -p ./linting-results/prettier-yaml && prettier-junit --config .prettierrc.js '**/*.yaml' '**/*.yml' > ./linting-results/prettier-yaml/report.xml",
+    "prepare": "npm run build",
+    "release": "standard-version",
     "test": "ava ./dist/**/*.test.*"
   },
   "repository": {
