--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@eric.dahlseng/notes-organizer",
   "version": "0.2.0",
   "description": "",
-  "bin": "dist/index.js",
+  "bin": "dist/cli.js",
   "scripts": {
     "build": "rm -rf ./dist && babel sources --out-dir dist --copy-files --source-maps inline",
-    "dev": "babel-node sources/index.js",
+    "dev": "babel-node sources/cli.js",
     "lint": "npm run lint:commit -- --from master; npm run lint:js; npm run lint:json; npm run lint:yaml",
     "lint:commit": "commitlint",
     "lint:js": "eslint ./",
